Fixing the misalignment of avatar between member activity and member detail (#15939)
closes TryGhost/Team#2356

--- a/ghost/admin/app/styles/layouts/members.css
+++ b/ghost/admin/app/styles/layouts/members.css
@@ -722,7 +722,6 @@ label[for="member-description"] + p {
 .gh-member-details-identity {
     display: flex;
     align-items: center;
-    margin-left: -4px;
 }
 
 .gh-member-details-meta {
